--- a/bibliography.bib
+++ b/bibliography.bib
@@ -59,4 +59,46 @@
     url       = "https://caniuse.com/wasm",
     keywords  = "Can I Use?"
 }
+@online{SiemensKern,
+    author    = "Siemens AG",
+    title     = "Siemens AG - Unternehmensstruktur",
+    url       = "https://new.siemens.com/de/de/unternehmen/konzern/unternehmensstruktur.html",
+    keywords  = "Siemens, unternehmensstruktur"
+}
+@online{DIBranches,
+    author    = "Siemens AG",
+    title     = "Digital Industries",
+    url       = "https://new.siemens.com/de/de/unternehmen/konzern/unternehmensstruktur/digital-industries.html",
+    keywords  = "Siemens, unternehmensstruktur"
+}
+@online{SCALANCE,
+    author    = "Siemens AG",
+    title     = "SCALANCE",
+    url       = "https://new.siemens.com/de/de/produkte/automatisierung/industrielle-kommunikation/scalance.html",
+    keywords  = "SCALANCE"
+}
+@online{SCALANCEM,
+    author    = "Siemens AG",
+    title     = "SCALANCE M",
+    url       = "https://new.siemens.com/de/de/produkte/automatisierung/industrielle-kommunikation/industrial-remote-communication/remote-networks/scalance-m-industrie-router-ip-basierte-netze.html",
+    keywords  = "SCALANCE"
+}
+@online{SCALANCEW,
+    author    = "Siemens AG",
+    title     = "SCALANCE W",
+    url       = "https://new.siemens.com/de/de/produkte/automatisierung/industrielle-kommunikation/industrial-wireless-lan.html",
+    keywords  = "SCALANCE"
+}
+@online{SCALANCES615,
+    author    = "Siemens AG",
+    title     = "SCALANCE S615",
+    url       = "https://new.siemens.com/de/de/produkte/automatisierung/industrielle-kommunikation/industrial-ethernet/netzwerksicherheit/scalance-s.html",
+    keywords  = "SCALANCE"
+}
+@online{SCALANCEMUM,
+    author    = "Siemens AG",
+    title     = "SCALANCE MUM - 5G",
+    url       = "https://new.siemens.com/de/de/produkte/automatisierung/industrielle-kommunikation/industrial-5g/5g-router-scalance-mum.html",
+    keywords  = "SCALANCE"
+}
 
