--- a/customcommands.tex
+++ b/customcommands.tex
@@ -22,6 +22,7 @@
 %TODO wollen wir das so haben? Finde ich persönlich besser - Marcel
 \usepackage[section]{placeins} % Graphics and tables are forced to be set before the beginning of a new section. Althoug this does not work with subsections. But you can use \FloatBarrier before a subsection to prevent this.
 
+\usepackage{}
 %----------------------------------------------------------------------------------------
 % User created custom commands
 %----------------------------------------------------------------------------------------
