--- a/07_Kalender.tex
+++ b/07_Kalender.tex
@@ -90,19 +90,19 @@
 58  & 23.12.2022    &  Problem mit Textgenerierung beheben                                                        \\ \hline 
 &               &                                                       \\ \hline 
 59  & 27.12.2022    & Änderung in Datengenerierung, alle Datenpunkte abgdecket                                                      \\ \hline 
-60  & 28.12.2022    &                                                       \\ \hline 
-61  & 29.12.2022    &                                                       \\ \hline 
-62  & 30.12.2022    &                                                       \\ \hline 
+60  & 28.12.2022    & Beheben von Memory Leak                                                      \\ \hline 
+61  & 29.12.2022    & Zwischentest PDF Generierung                                                      \\ \hline 
+62  & 30.12.2022    & Zwischentest PDF Generierung                                                      \\ \hline 
 &               &                                                       \\ \hline 
-63  & 02.01.2023    &                                                       \\ \hline 
-64  & 03.01.2023    &                                                       \\ \hline 
-65  & 04.01.2023    &                                                       \\ \hline 
-66  & 05.01.2023    &                                                       \\ \hline 
+63  & 02.01.2023    & Ändern von Rendermodus                                                      \\ \hline 
+64  & 03.01.2023    & Ändern von Rendermodus                                                        \\ \hline 
+65  & 04.01.2023    & Ändern von Rendermodus                                                        \\ \hline 
+66  & 05.01.2023    & Ändern von Rendermodus                                                        \\ \hline 
 &               &                                                       \\ \hline 
-67  & 09.01.2023    &                                                       \\ \hline 
-68  & 10.01.2023    &                                                       \\ \hline 
+67  & 09.01.2023    & Vortrag für Zwischenstandsbesprechung vorbereiten                                                       \\ \hline 
+68  & 10.01.2023    &  Datensäuberung anpassen                                                    \\ \hline 
 69  & 11.01.2023    &  Zwischenstandsbesprechung mit Hausleiter                                                      \\ \hline 
-70  & 12.01.2023    &                                                       \\ \hline 
+70  & 12.01.2023    &  Bestückung Relaisboxen                                                     \\ \hline 
 71  & 13.01.2023    &  Bestückung Relaisboxen, Aufbau Dauertestanlage                                                     \\ \hline 
 &               &                                                       \\ \hline 
 72  & 16.01.2023    & Krank                                                      \\ \hline 
@@ -111,62 +111,62 @@
 75  & 19.01.2023    & Aufbau Dauertestanlage                                                        \\ \hline 
 76  & 20.01.2023    & Aufbau Dauertestanlage                                                       \\ \hline
 &               &                                                       \\ \hline  
-77  & 23.01.2023    &                                                       \\ \hline 
+77  & 23.01.2023    &  Signalrecorder : CPU Daten                                                     \\ \hline 
 78  & 24.01.2023    &  Testeinrichtung an Amaribox                                                     \\ \hline 
 79  & 25.01.2023    &  Einrichten von Einplatiniencomputer für Testzwecke Dauertestanlage                                                      \\ \hline 
 80  & 26.01.2023    &  Bughunting \q{spezielles} Mobilfunknetz                                                     \\ \hline 
 81  & 27.01.2023    &  Abschaltung aller Geräte, Sicherheitsprüfung                                                     \\ \hline
 &               &                                                       \\ \hline  
 82  & 30.01.2023    &  Testen mit 5G Core Netz, nicht erfolgreich                                                     \\ \hline 
-83  & 31.01.2023    &                                                         \\ \hline 
+83  & 31.01.2023    &  Frei für Klausur                                                       \\ \hline 
 84  & 01.02.2023    &  Testen mit 5G Core Netz,  erfolgreich, Sim Karten bestücken                                                     \\ \hline 
-85  & 02.02.2023    &                                                       \\ \hline 
-86  & 03.02.2023    &                                                       \\ \hline
+85  & 02.02.2023    &  Geschwindigkeitstest Amaribox für Kundenauftrag                                                     \\ \hline 
+86  & 03.02.2023    &  Geschwindigkeitstest Amaribox für Kundenauftrag                                                  \\ \hline
 &               &                                                       \\ \hline  
-87  & 06.02.2023    &                                                       \\ \hline 
-88  & 07.02.2023    &                                                       \\ \hline 
-89  & 08.02.2023    &                                                       \\ \hline 
-90  & 09.02.2023    &                                                       \\ \hline 
-91  & 10.02.2023    &                                                       \\ \hline
+87  & 06.02.2023    & dynamische Textgenrierung überarbeiten                 \\ \hline 
+88  & 07.02.2023    & dynamische Textgenrierung überarbeiten                                                         \\ \hline 
+89  & 08.02.2023    & dynamische Textgenrierung überarbeiten                                                         \\ \hline 
+90  & 09.02.2023    &  dynamische Textgenrierung überarbeiten                                                        \\ \hline 
+91  & 10.02.2023    &  dynamische Textgenrierung überarbeiten                                                        \\ \hline
 &               &                                                       \\ \hline  
-92  & 13.02.2023    &                                                       \\ \hline 
-93  & 14.02.2023    &                                                       \\ \hline 
-94  & 15.02.2023    &                                                       \\ \hline 
-95  & 16.02.2023    &                                                       \\ \hline 
-96  & 17.02.2023    &                                                       \\ \hline
+92  & 13.02.2023    &  Vlan Einrichtung Testanlage                                                     \\ \hline 
+93  & 14.02.2023    &  Vlan einrichtung Testanlage                                                     \\ \hline 
+94  & 15.02.2023    &  Beschäftigung mit SFP's                                                     \\ \hline 
+95  & 16.02.2023    &  Sinema RC Test                                                    \\ \hline 
+96  & 17.02.2023    &  Netzwerkkonfiguration Testrechner reparieren                                                     \\ \hline
 &               &                                                       \\ \hline  
-97  & 20.02.2023    &                                                       \\ \hline 
+97  & 20.02.2023    &   Sinema RC Test                                                    \\ \hline 
 98  & 21.02.2023    &  Code Review 1                                        \\ \hline 
-99  & 22.02.2023    &                                                       \\ \hline 
-100 & 23.02.2023    &                                                       \\ \hline 
+99  & 22.02.2023    &   Sim Karten Validierung                                                     \\ \hline 
+100 & 23.02.2023    &  Sim Karten Validierung                                                    \\ \hline 
 101 & 24.02.2023    &  Code Review 2                                    \\ \hline
 &               &                                                       \\ \hline  
-102 & 27.02.2023    &                                                       \\ \hline 
-103 & 28.02.2023    &                                                       \\ \hline 
-104 & 01.03.2023    &                                                       \\ \hline 
-105 & 02.03.2023    &                                                       \\ \hline 
-106 & 03.03.2023    &                                                       \\ \hline
+102 & 27.02.2023    &  Umsetzen Codereview Änderungen                                                     \\ \hline 
+103 & 28.02.2023    &  Umsetzen Codereview Änderungen                                                      \\ \hline 
+104 & 01.03.2023    &   Umsetzen Codereview Änderungen                                                     \\ \hline 
+105 & 02.03.2023    &   Extrahieren von per Javascript generierten Webseiten                                                    \\ \hline 
+106 & 03.03.2023    &  Extrahieren von per Javascript generierten Webseiten                                                      \\ \hline
 &               &                                                       \\ \hline  
-107 & 06.03.2023    &                                                       \\ \hline
-108 & 07.03.2023    &                                                       \\ \hline
-109 & 08.03.2023    &                                                       \\ \hline
-110 & 09.03.2023    &                                                       \\ \hline
-111 & 10.03.2023    &                                                       \\ \hline
+107 & 06.03.2023    &  Aufbauen eines Dauertestfalls                                                        \\ \hline
+108 & 07.03.2023    &  Aufbauen eines Dauertestfalls                                                     \\ \hline
+109 & 08.03.2023    &  Aufbauen eines neuen Testfalls, Upgrade/Downgrade Tests                                                     \\ \hline
+110 & 09.03.2023    & Aufbauen eines neuen Testfalls,  Upgrade/Downgrade Tests                                                        \\ \hline
+111 & 10.03.2023    &   Aufbauen eines neuen Testfalls,   Upgrade/Downgrade Tests                                                      \\ \hline
 &               &                                                       \\ \hline 
-112 & 13.03.2023    &                                                       \\ \hline
-113 & 14.03.2023    &                                                       \\ \hline
-114 & 15.03.2023    &                                                       \\ \hline
+112 & 13.03.2023    & Aufbauen eines neuen Testfalls, VXLAN                                                      \\ \hline
+113 & 14.03.2023    & Aufbauen eines neuen Testfalls, VXLAN                                                          \\ \hline
+114 & 15.03.2023    &  Aufbauen eines neuen Testfalls, VXLAN                                                         \\ \hline
 115 & 16.03.2023    &  Vortrag vorbereiten                                                     \\ \hline
 116 & 17.03.2023    &  Vortrag über Praxissemester in Hausversammlung                                                     \\ \hline
 &               &                                                       \\ \hline 
-117 & 20.03.2023    &                                                       \\ \hline
-118 & 21.03.2023    &                                                       \\ \hline
-119 & 22.03.2023    &                                                       \\ \hline
-120 & 23.03.2023    &                                                       \\ \hline
-121 & 24.03.2023    &                                                       \\ \hline
+117 & 20.03.2023    &  GPS Test                                                     \\ \hline
+118 & 21.03.2023    &  GPS Test                                                     \\ \hline
+119 & 22.03.2023    &  GPS Test                                                     \\ \hline
+120 & 23.03.2023    &  Codeanalyse Timing                                                    \\ \hline
+121 & 24.03.2023    &  Codeanalyse Timing                                                     \\ \hline
 &               &                                                       \\ \hline 
-122 & 27.03.2023    &                                                       \\ \hline
-123 & 28.03.2023    &                                                       \\ \hline
+122 & 27.03.2023    &  Access Point Mode überarbeitet                                                     \\ \hline
+123 & 28.03.2023    &  Access Point Mode überarbeitet                                                      \\ \hline
 124 & 29.03.2023    &  GPS Data Sanitatation Tool erstellt                                                  \\ \hline
 125 & 30.03.2023    &  E-Sim gerät \q{ausgetauscht}, GPS Tool                                                    \\ \hline
 126 & 31.03.2023    &  Praxissemesterbericht                                                    \\ \hline
