--- a/structure.tex
+++ b/structure.tex
@@ -169,7 +169,7 @@
 \fancyhead[LE,RO]{\sffamily\normalsize\thepage} % Styling for the page number in the header
 \fancyhead[LO]{\rightmark} % Print the nearest section name on the left side of odd pages
 \fancyhead[RE]{\leftmark} % Print the current chapter name on the right side of even pages
-%\fancyfoot[C]{\thepage} % Uncomment to include a footer
+\fancyfoot[C]{\thepage} % Uncomment to include a footer
 
 \renewcommand{\headrulewidth}{0.5pt} % Thickness of the rule under the header
 
@@ -476,8 +476,8 @@ innerbottommargin=5pt]{cBox}
 			\node at (current page.north west)
 			{\begin{tikzpicture}[remember picture,overlay]
 					\node[anchor=north west,inner sep=0pt] at (0,0) {\ifusechapterimage\includegraphics[width=\paperwidth]{\thechapterimage}\fi};
-					\draw[anchor=west] (\Gm@lmargin-0cm,-9cm) node [minimum height=2cm, line width=0pt,rounded corners=0pt,draw=white,fill=white,fill opacity=1,inner sep=10pt] {\huge\bfseries\color{ThemeColor}\thechapter\autodot ~#1 \strut};
-					\draw[anchor=east] (\Gm@lmargin-0cm,-9cm) node [minimum width=1cm, minimum height=2cm, line width=0pt,rounded corners=0pt, draw=ThemeColor,fill=ThemeColor,fill opacity=1] {};
+					\draw[anchor=west] (\Gm@lmargin-0cm,-5cm) node [minimum height=2cm, line width=0pt,rounded corners=0pt,draw=white,fill=white,fill opacity=1,inner sep=10pt] {\huge\bfseries\color{ThemeColor}\thechapter\autodot ~#1 \strut};
+					\draw[anchor=east] (\Gm@lmargin-0cm,-5cm) node [minimum width=1cm, minimum height=2cm, line width=0pt,rounded corners=0pt, draw=ThemeColor,fill=ThemeColor,fill opacity=1] {};
 			\end{tikzpicture}};
 		\end{tikzpicture}
 		\else
@@ -489,7 +489,7 @@ innerbottommargin=5pt]{cBox}
 					\draw[anchor=east] (\Gm@lmargin-0cm,-9cm) node [minimum width=1cm, minimum height=2cm, line width=0pt,rounded corners=0pt,draw=ThemeColor,fill=ThemeColor,fill opacity=1] {};
 			\end{tikzpicture}};
 		\end{tikzpicture}
-		\fi\fi\par\vspace*{270\p@}}}
+		\fi\fi\par\vspace*{150\p@}}}
 
 %-------------------------------------------
 
@@ -528,7 +528,19 @@ addtohook={%
 \usepackage{longtable}
 %%%% own packages
 \usepackage{pdfpages}
-
+\usepackage{listings}
+% \usepackage{SIunits}
+\usepackage{xcolor}
+\lstset{
+    frame=tb, % draw a frame at the top and bottom of the code block
+    tabsize=4, % tab space width
+    showstringspaces=false, % don't mark spaces in strings
+    numbers=left, % display line numbers on the left
+    commentstyle=\color{orange}, % comment color
+    keywordstyle=\color{blue}, % keyword color
+    stringstyle=\color{red} % string color
+}
+\renewcommand*{\lstlistoflistings}{Quellcodeverzeichniss}
 %%%%%%%%%%%%%%%%% Define new macros
 
 
